--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
       <input type="number" id="convertInput" placeholder="ETH to Convert" style="margin-right: 40px" class="test">
       <p>Use the "Convert ETH to $DTUL" button below to purchase your proportionate share of Danilo's future revenue.
       </p>
-      <button type="submit" class="test" onclick="conversionTx(document.getElementById('convertInput'))" onclick="hide('popup2')" style="margin-bottom: 20px">Convert ETH to
+      <button type="submit" class="test" onclick="conversionTx(document.getElementById('convertInput'))"
+        onclick="hide('popup2')" style="margin-bottom: 20px">Convert ETH to
         $DTUL</button>
       <center><a href="#" onclick="hide('popup2')">Close</a></center>
     </div>
@@ -271,7 +272,8 @@
       <input type="number" id="distributeInput" placeholder="ETH to Distribute" style="margin-right: 40px" class="test">
       <p>Use the "Distribute Revenue" button below to distribute your gross revenue to $DTUL holders for the current
         reporting period.</p>
-      <button type="submit" class="test" onclick="conversionTx(document.getElementById('distributeInput'))" onclick="hide('popup3')" style="margin-bottom: 20px">Distribute
+      <button type="submit" class="test" onclick="conversionTx(document.getElementById('distributeInput'))"
+        onclick="hide('popup3')" style="margin-bottom: 20px">Distribute
         Revenue</button>
       <center><a href="#" onclick="hide('popup3')">Close</a></center>
     </div>
